Ajustes css theme steps

--- a/theme/steps/templates/flat_navigation.mustache
+++ b/theme/steps/templates/flat_navigation.mustache
@@ -99,6 +99,6 @@
     {{/ flatnavigation }}
     </ul>
 </nav>
-<div class="d-flex justify-content-center">
+<!--<div class="d-flex justify-content-center">
     <img src="/moodle_fmr/theme/steps/pix/login/login_manos_m.jpg" alt="" class="img-menu-lateral mt-3">
-</div>
+</div>-->
